--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "react tutorials",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node scripts/server.js",
+    "watch": "cross-env NODE_ENV=development webpack -w",
+    "build": "cross-env NODE_ENV=production webpack -p"
   },
   "repository": {
     "type": "git",
@@ -19,6 +21,7 @@
   "devDependencies": {
     "antd": "^3.1.0",
     "axios": "^0.17.1",
+    "babel-core": "^6.26.0",
     "babel-eslint": "^8.1.2",
     "babel-loader": "^7.1.2",
     "babel-plugin-import": "^1.6.3",
@@ -33,6 +36,7 @@
     "eslint-loader": "^1.9.0",
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.2",
+    "html-webpack-plugin": "^2.30.1",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "react": "^16.2.0",
